# crawler

./: Cargo.toml
src/: crawler.rs  error.rs  main.rs
src/spiders/: cvedetails.rs  mod.rs
