[package]
name = "crawler"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.81"
clap = { version="4.5.16", features = ["derive", "cargo"] }
clap_derive = "4.5.13"
env_logger = "0.11.5"
futures = "0.3.30"
log = "0.4.22"
reqwest = "0.12.7"
select = "0.6.0"
thiserror = "1.0.63"
tokio = {version="1.39.2", features=['full']}
tokio-stream = "0.1.15"
